--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Run script
         run: python trends_update.py
 
+      - name: Add README.md to staging area  # Tambahkan langkah ini
+        run: git add README.md
+  
       - name: Commit and push changes
         run: |
           git config user.name 'github-actions[bot]'
