--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,9 @@ name: Update README
 
 on:
   schedule:
-    - cron: "*/5 * * * *"
-  workflow_dispatch: {}
+    - cron: "*/5 * * * *"  # Jalankan setiap 5 menit
+  workflow_dispatch: {}   # Tambahkan baris ini
+
 jobs:
   update:
     runs-on: ubuntu-latest
@@ -22,13 +23,15 @@ jobs:
       - name: Run script
         run: python trends_update.py
 
-      - name: Add README.md to staging area  # Tambahkan langkah ini
+      - name: Add README.md to staging area
         run: git add README.md
-  
+
+      - name: Configure Git
+        run: git branch --set-upstream-to origin/main main 
+
       - name: Commit and push changes
         run: |
           git config user.name 'github-actions[bot]'
           git config user.email '41898282+github-actions[bot]@users.noreply.github.com'
-          git add README.md
           git commit -m 'Update README'
           git push
