--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,50 +3,42 @@ name: Update README
 on:
   schedule:
     - cron: "*/5 * * * *"  # Jalankan setiap 5 menit
-  workflow_dispatch: {}   # Tambahkan baris ini
+  workflow_dispatch: {}
 
 jobs:
   update:
     runs-on: ubuntu-latest
 
-steps:
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-  - name: Checkout repository
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-    uses: actions/checkout@v3
+      - name: Install dependencies
+        run: pip install requests pandas
 
-  - name: Set up Python
+      - name: Run script
+        run: python trends_update.py
 
-    uses: actions/setup-python@v4
+      - name: Check for changes
+        run: |
+          if [[ $(git status --porcelain) ]]; then
+            echo "Changes detected"
+          else
+            echo "No changes detected"
+            exit 0
+          fi
 
-    with:
+      - name: Add README.md to staging area
+        run: git add README.md
 
-      python-version: '3.10'
-
-  - name: Install dependencies
-
-    run: pip install requests pandas
-
-  - name: Run script
-
-    run: python trends_update.py
-
-  - name: Add README.md to staging area
-
-    run: git add README.md
-
-  - name: Configure Git
-
-    run: git branch --set-upstream-to origin/main main 
-
-  - name: Commit and push changes
-
-    run: |
-
-      git config user.name 'github-actions[bot]'
-
-      git config user.email '41898282+github-actions[bot]@users.noreply.github.com'
-
-      git commit -m 'Update README'
-
-      git push
+      - name: Commit and push changes
+        run: |
+          git config user.name 'github-actions[bot]'
+          git config user.email '41898282+github-actions[bot]@users.noreply.github.com'
+          git commit -m 'Update README' || echo "No changes to commit."
+          git push
